--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,15 @@ name = "pypi"
 [packages]
 django = "*"
 gunicorn = "*"
+python-decouple = "*"
+dj-database-url = "*"
+psycopg2-binary = "*"
+django-s3-folder-storage = "*"
+collectfast = "*"
 
 [dev-packages]
 codecov = "*"
+pytest-django = "*"
 
 [requires]
 python_version = "3.8"
